# a2a-demo

my-project/: README.md  pyproject.toml
my-project/src/brestagent/: __main__.py  agent_executor.py  brestagent.py  task_manager.py
my-project/src/codeagent/: __init__.py  __main__.py  agent.py  codeagent.py  task_manager.py
my-project/src/gitagent/: __main__.py  gitagent.py  task_manager.py
my-project/src/my_project/: __init__.py  codeagent.py  task_manager.py
