[project]
name = "my-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-samples",
    "a2a-sdk",
    "click>=8.1.8",
    "gtfs-realtime-bindings>=1.0.0",
    "langchain>=0.3.24",
    "langchain-google-genai>=2.1.3",
    "langchain-mcp-adapters>=0.1.0",
    "langchain-ollama>=0.3.2",
    "langgraph>=0.3.34",
]

[project.scripts]
my-project = "my_project:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
a2a-samples = { git = "https://github.com/google-a2a/a2a-samples", subdirectory = "samples/python" }
a2a-sdk = { git = "https://github.com/google-a2a/a2a-python" }

[tool.hatch.build.targets.wheel]
packages = ["src/gitagent"]
